# constrained-loaders

./: pyproject.toml  requirements.dev.txt  setup.py
.github/workflows/: pytest.yml  pytest3.10.yml  pytest3.11.yml  pytest3.8.yml  pytest3.9.yml
examples/: sa_simple_example.py
src/constrained_loaders/: __init__.py  abstraction.py  exceptions.py  loader_builder.py  loader_builders.py  loaders.py  version.py
src/constrained_loaders/sa/: __init__.py  complex_builder.py  context.py  extensions.py  filters.py  loader.py  loader_builder.py  simple_builder.py  sorts.py
src/crudalchemy/: abstraction.py  loaders.py  manipulation.py  sinks.py  types.py
src/datmodif/: abstraction.py  exceptions.py  loader_builders.py  sinks.py  sources.py
tests/unittests/constrained_loaders/loader_builders/: test_data_source_builder_base.py  test_loader_builder_base.py
