[project]
name = "constrained_loaders"
version = "0.0.0"
dependencies = [
]

[tool.setuptools]
package-dir = { "constrained_loaders" = "src/constrained_loaders" }

[build-system]
requires = ["setuptools"]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.1,<8.0",
    "mock>=5.0.1,<6.0",
    "flake8>=6.0,<7.0",
]

gbol = [
    "lgbt",
]

sa = [
    "sqlalchemy>=2.0,<3.0"
]
